Refactors on logistics